--- a/requirements.txt
+++ b/requirements.txt
@@ -3,27 +3,39 @@
 # platform: osx-64
 _tflow_select=2.3.0=mkl
 absl-py=0.7.0=py37_0
+alabaster=0.7.12=py37_0
 asn1crypto=0.24.0=py37_0
 astor=0.7.1=py37_0
 attrs=19.1.0=py37_1
+awscli=1.16.86=py37_0
+babel=2.6.0=py37_0
 blas=1.0=mkl
 boto=2.49.0=py37_0
-boto3=1.9.111=py_0
-botocore=1.12.112=py_0
+boto3=1.9.76=py_0
+botocore=1.12.76=py_0
+bzip2=1.0.6=h1de35cc_1002
 c-ares=1.15.0=h1de35cc_1
 ca-certificates=2019.3.9=hecc5488_0
 certifi=2019.3.9=py37_0
 cffi=1.11.5=py37h6174b99_1
 chardet=3.0.4=py37_1
 click=7.0=py37_0
-conda=4.6.11=py37_0
+colorama=0.3.9=py_1
+conda=4.6.14=py37_0
 conda-env=2.6.0=1
-cryptography=2.4.2=py37ha12b0ac_0
+corenlp=0.0.14=pypi_0
+cryptography=2.6.1=py37ha12b0ac_0
 cycler=0.10.0=py37_0
+cymem=2.0.2=py37h04f5b5a_0
 cython=0.29.6=py37h0a44026_0
+cytoolz=0.9.0.1=py37h1de35cc_1
 decorator=4.4.0=py37_1
+dill=0.2.9=py37_0
 docutils=0.14=py37_0
+en-core-web-sm=2.0.0=pypi_0
+entrypoints=0.3=py37_0
 filelock=3.0.10=pypi_0
+flake8=3.7.7=py37_0
 flask=1.0.2=py37_1
 flask-cors=3.0.7=py37_0
 freetype=2.9.1=hb4e5f40_0
@@ -34,7 +46,9 @@ gensim=3.4.0=py37h1de35cc_0
 grpcio=1.16.1=py37h044775b_1
 h5py=2.9.0=py37h3134771_0
 hdf5=1.10.4=hfa1e0ec_0
+icu=58.2=h0a44026_1000
 idna=2.8=py37_0
+imagesize=1.1.0=py37_0
 intel-openmp=2019.3=199
 ipython_genutils=0.2.0=py37_0
 itsdangerous=1.1.0=py37_0
@@ -51,67 +65,102 @@ libcxxabi=4.0.1=hcfea43d_1
 libedit=3.1.20170329=hb402a30_2
 libffi=3.2.1=h475c297_4
 libgfortran=3.0.1=h93005f0_2
+libiconv=1.15=h01d97ff_1005
 libpng=1.6.36=ha441bb4_0
 libprotobuf=3.6.1=hd9629dc_0
+libxml2=2.9.9=hd80cff7_0
+libxslt=1.1.32=h33a18ac_1002
+lxml=4.3.3=py37h08abf6f_0
 markdown=3.0.1=py37_0
 markupsafe=1.1.1=py37h1de35cc_0
 matplotlib=3.0.3=py37h54f8f79_0
-mkl=2019.3=199
-mkl_fft=1.0.10=py37h5e564d8_0
-mkl_random=1.0.2=py37h27c97d8_0
+mccabe=0.6.1=py37_1
+mkl=2018.0.3=1
+mkl_fft=1.0.6=py37hb8a8100_0
+mkl_random=1.0.1=py37h5d10147_1
 mock=2.0.0=py37_0
+msgpack-numpy=0.4.3.2=py37_0
+msgpack-python=0.6.1=py37h04f5b5a_1
+murmurhash=1.0.2=py37h0a44026_0
 nbformat=4.4.0=py37_0
 ncurses=6.1=h0a44026_1
 nltk=3.4=py37_1
 numexpr=2.6.9=py37h1702cab_1000
-numpy=1.16.2=py37hacdab7b_0
-numpy-base=1.16.2=py37h6575580_0
+numpy=1.15.4=py37h6a91979_0
+numpy-base=1.15.4=py37h8a80b8c_0
 openssl=1.1.1b=h01d97ff_2
+packaging=19.0=py37_0
 pandas=0.24.2=py37h0a44026_0
 pbr=5.1.3=py_0
-pip=18.1=py37_0
+pip=19.0.3=py37_0
+plac=0.9.6=py37_0
 plotly=3.7.0=py_0
 pluggy=0.9.0=pypi_0
+preshed=2.0.1=py37h0a44026_0
 protobuf=3.6.1=py37h0a44026_0
 py=1.8.0=pypi_0
+pyasn1=0.4.4=py_1
+pycodestyle=2.5.0=py37_0
 pycosat=0.6.3=py37h1de35cc_0
 pycparser=2.19=py37_0
 pycryptodome=3.8.0=pypi_0
+pyflakes=2.1.1=py37_0
+pygments=2.3.1=py37_0
 pyldavis=2.1.2=py_0
 pymongo=3.7.2=py37h0a44026_0
 pyopenssl=18.0.0=py37_0
 pyparsing=2.3.1=py37_0
 pyrsistent=0.14.11=py37h1de35cc_0
 pysocks=1.6.8=py37_0
-python=3.7.1=haf84260_7
+python=3.7.2=haf84260_0
 python-dateutil=2.8.0=py37_0
+python-docx=0.8.10=py_0
 python.app=2=py37_9
 pytz=2018.9=py37_0
+pyyaml=3.13=py37h1de35cc_1001
 readline=7.0=h1de35cc_5
+regex=2019.03.09=py37h1de35cc_0
 requests=2.21.0=py37_0
 retrying=1.3.3=py37_2
+rsa=3.4.2=py_1
 ruamel_yaml=0.15.46=py37h1de35cc_0
-s3transfer=0.2.0=py37_0
-scikit-learn=0.20.3=py37h27c97d8_0
-scipy=1.2.1=py37h1410ff5_0
+s3transfer=0.1.13=py37_1001
+scikit-learn=0.20.1=py37h4f467ca_0
+scipy=1.1.0=py37h28f7352_1
 setuptools=40.6.3=py37_0
+singledispatch=3.4.0.3=pypi_0
 six=1.12.0=py37_0
 smart_open=1.8.0=py37_0
+snowballstemmer=1.2.1=py37_0
+spacy=2.0.16=py37h6440ff4_0
+sphinx=2.0.1=py_0
+sphinxcontrib-applehelp=1.0.1=py_0
+sphinxcontrib-devhelp=1.0.1=py_0
+sphinxcontrib-htmlhelp=1.0.2=py_0
+sphinxcontrib-jsmath=1.0.1=py_0
+sphinxcontrib-qthelp=1.0.2=py_0
+sphinxcontrib-serializinghtml=1.1.1=py_0
 sqlite=3.26.0=ha441bb4_0
 tensorboard=1.13.1=py37haf313ee_0
 tensorflow-base=1.13.1=mkl_py37h66b1bf0_0
 tensorflow-estimator=1.13.0=py_0
 termcolor=1.1.0=py37_1
+thinc=6.12.1=py37h4f467ca_0
 tk=8.6.8=ha441bb4_0
 toml=0.10.0=pypi_0
+toolz=0.9.0=py37_0
 tornado=6.0.2=py37h1de35cc_0
 tox=3.8.1=pypi_0
+tqdm=4.31.1=py37_1
 traitlets=4.3.2=py37_0
+ujson=1.35=py37h1de35cc_0
 unidecode=1.0.23=py37_0
 urllib3=1.24.1=py37_0
 virtualenv=16.4.3=pypi_0
 werkzeug=0.14.1=py37_0
 wheel=0.32.3=py37_0
+wrapt=1.10.11=py37h1de35cc_2
+xlrd=1.2.0=py37_0
 xz=5.2.4=h1de35cc_4
 yaml=0.1.7=hc338f04_2
 zlib=1.2.11=h1de35cc_3
